[package]
name = "seeker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }   # for argument parsing
ipnet = "2.11.0"        # for ip range
netdev = "0.37"         # for network interface info
pcap = "2.3.0"          # for sniffer
pnet = "0.35.0"         # for packet crafting
anyhow = "1.0.75"       # 
rand = "0.8.5"          # for random numbers
