[package]
name = "seeker"
version = "0.1.0"
edition = "2024"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"    


[dependencies]
clap = { version = "4.5", features = ["derive"] }
ipnet = "2.11.0"
netdev = "0.37"
pcap = "2.3.0"
pnet = "0.35.0"
rand = "0.8.5"
etherparse = "0.19.0"
dns-lookup = "3.0.0"
